--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Navigation links (hidden by default) -->
       <div id="myLinks">
         <a class="nav-link1" href="file:///C:/Users/Ruben/Desktop/site-istoria%20poporului%20evreu/index.html">PAGINA DE START</a>
-        <a class="nav-link2" href="file:///C:/Users/Ruben/Desktop/articole%20blog/index.html">ARTICOLE</a>
+        <a class="nav-link2" href="https://rubyfili94.github.io/poporul-evreu-articole/">ARTICOLE</a>
         <a class="nav-link3" href="file:///C:/Users/Ruben/Desktop/despre%20mine/index.html">DESPRE MINE</a>
       </div>
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
