--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="nav-title-picture">
     <!-- Top Navigation Menu -->
     <div class="topnav">
-      <a class="nav-link3" href="file:///C:/Users/Ruben/Desktop/despre%20mine/index.html"><b>RUBY BLOG</b></a>
+      <a class="nav-link3" href="https://rubyfili94.github.io/poporul-evreu-despre-mine/"><b>RUBY BLOG</b></a>
       <!-- Navigation links (hidden by default) -->
       <div id="myLinks">
-        <a class="nav-link1" href="file:///C:/Users/Ruben/Desktop/site-istoria%20poporului%20evreu/index.html">PAGINA DE START</a>
+        <a class="nav-link1" href="https://rubyfili94.github.io/poporul-evreu-pagina-principala/">PAGINA DE START</a>
         <a class="nav-link2" href="https://rubyfili94.github.io/poporul-evreu-articole/">ARTICOLE</a>
         <a class="nav-link3" href="https://rubyfili94.github.io/poporul-evreu-despre-mine/">DESPRE MINE</a>
       </div>
@@ -50,7 +50,7 @@
   <div class="middle-container" <div class="articles-container">
     <h2 class="first-line">CELE MAI NOI POSTĂRI</h2>
 
-    <h2 class="article-title"><a href="file:///C:/Users/Ruben/Desktop/holocaustul/index.html">Holocaustul și formarea statului evreu modern</a></h2>
+    <h2 class="article-title"><a href="https://rubyfili94.github.io/poporul-evreu-holocaustul/">Holocaustul și formarea statului evreu modern</a></h2>
     <p class="article-dates">30.01.2022</p>
 
     <div class="holocaust-image col-lg-7 col-md-10 col-sm-10 col-10">
@@ -61,7 +61,7 @@
       evreiască a Europei a fost decimată.(...)</p>
 
 
-    <h2 class="article-title"><a href="file:///C:/Users/Ruben/Desktop/david%20si%20solomon/index.html">Epoca lui David și monarhia unită</a></h2>
+    <h2 class="article-title"><a href="https://rubyfili94.github.io/poporul-evreu-epoca-lui-david-si-monarhia-unita/">Epoca lui David și monarhia unită</a></h2>
     <p class="article-dates">21.01.2022</p>
 
     <div class="jerusalem-image col-lg-7 col-md-10 col-sm-10 col-10">
@@ -70,7 +70,7 @@
 
     <p class="text-article2 col-lg-7 col-md-10 col-sm-10 col-10">David reprezintă o personalitate istorică și simbolică extrem de importantă din istoria poporului evreu, care va avea ecou mult după moartea sa până în zilele noastre.(...)</p>
 
-    <h2 class="article-title"><a href="file:///C:/Users/Ruben/Desktop/poporul%20evreu/articole%20pagini%20web/index.html">Istoria poporului evreu- scurt rezumat</a></h2>
+    <h2 class="article-title"><a href="https://rubyfili94.github.io/poporul-evreu-rezumat/">Istoria poporului evreu- scurt rezumat</a></h2>
     <p class="article-dates">13.01.2022</p>
 
     <div class="israel-image col-lg-7 col-md-10 col-sm-10 col-10">
@@ -83,7 +83,7 @@
 
 
   <div class="button-down  col-lg-2 col-sm-10 col-10">
-    <button type="button" class="btn btn-outline-dark btn-lg"><a class="link4" href="file:///C:/Users/Ruben/Desktop/articole%20blog/index.html">TOATE ARTICOLELE</a></button>
+    <button type="button" class="btn btn-outline-dark btn-lg"><a class="link4" href="https://rubyfili94.github.io/poporul-evreu-articole/">TOATE ARTICOLELE</a></button>
   </div>
   </div>
 
